--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,11 +9,13 @@
     #sidebar{
       grid-row: 2;
       grid-column: 1;
-      height: 90vh;
       background-color: #8053a3;
     }
     main{
       grid-row: 2;
       grid-column: 2;
+      display: flex;
+      justify-content: center;
+      align-self: center;
     }
   }
