Feat.(authors-module): view authors on table

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,7 @@
     #sidebar{
       grid-row: 2;
       grid-column: 1;
+      min-height: 92vh;
       background-color: #8053a3;
     }
     main{
