--- a/src/app/books/components/books/books.component.html
+++ b/src/app/books/components/books/books.component.html
@@ -1,8 +1,8 @@
 <table mat-table [dataSource]="books" class="mat-elevation-z8">
 
-  <ng-container matColumnDef="id">
+  <ng-container matColumnDef="#">
     <th mat-header-cell *matHeaderCellDef> # </th>
-    <td mat-cell *matCellDef="let book"> {{book.id}} </td>
+    <td mat-cell *matCellDef="let book; let i = index"> {{i+1}} </td>
   </ng-container>
 
   <ng-container matColumnDef="title">
