--- a/src/app/books/components/books/books.component.html
+++ b/src/app/books/components/books/books.component.html
@@ -2,7 +2,7 @@
 
   <ng-container matColumnDef="#">
     <th mat-header-cell *matHeaderCellDef> # </th>
-    <td mat-cell *matCellDef="let book; let i = index"> {{i+1}} </td>
+    <td mat-cell *matCellDef="let book"> {{book.id}} </td>
   </ng-container>
 
   <ng-container matColumnDef="title">
@@ -16,13 +16,11 @@
   </ng-container>
 
   <ng-container matColumnDef="genres">
-    <th mat-header-cell *matHeaderCellDef>GENRES</th>
-    <td mat-cell *matCellDef="let book">
-      <p *ngFor="let genre of book.genres">{{genre.name}}</p>
-    </td>
-    </ng-container>
-
+    <th mat-header-cell *matHeaderCellDef> GENRES </th>
+    <td mat-cell *matCellDef="let book"> </td>
+  </ng-container>
+  
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let book; columns: displayedColumns;" 
-  [routerLink]="['book', book.id]"></tr>
+  [routerLink]="['/book', book.id]"></tr>
 </table>
