--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -7,10 +7,10 @@
   </mat-sidenav>
   
   <mat-drawer mode="side" opened >
-    <button mat-icon-button class="example-icon" >
+    <button mat-icon-button class="example-icon" [routerLink]="['/books', 'page', '1']">
       <mat-icon>library_books</mat-icon>
     </button>
-    <button mat-icon-button class="example-icon">
+    <button mat-icon-button class="example-icon" [routerLink]="['/authors', 'page', '1']">
       <mat-icon>supervisor_account</mat-icon>
     </button>
   </mat-drawer>
