--- a/src/app/books/components/books/books.component.html
+++ b/src/app/books/components/books/books.component.html
@@ -17,7 +17,7 @@
 
   <ng-container matColumnDef="genres">
     <th mat-header-cell *matHeaderCellDef> GENRES </th>
-    <td mat-cell *matCellDef="let book"> </td>
+    <td mat-cell *matCellDef="let book"> {{book.genres | comma}} </td>
   </ng-container>
   
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
