--- a/src/app/book/components/book/book.component.html
+++ b/src/app/book/components/book/book.component.html
@@ -6,7 +6,7 @@
         <pre>
           Author: {{book?.author.first_name}} {{book?.author.last_name}}
 
-          {{book?.genres | comma}}
+          Genres: {{book?.genres | comma}}
         </pre>   
     </mat-grid-tile>
     <mat-grid-tile>
