--- a/src/app/books/components/books/books.component.html
+++ b/src/app/books/components/books/books.component.html
@@ -1,4 +1,6 @@
-<table mat-table [dataSource]="books" class="mat-elevation-z8">
+<title>{{title}}</title>
+
+<table mat-table [dataSource]="books" class="mat-elevation-z8 data-table">
 
   <ng-container matColumnDef="#">
     <th mat-header-cell *matHeaderCellDef> # </th>
