--- a/src/app/authors/components/authors/authors.component.html
+++ b/src/app/authors/components/authors/authors.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="authors" class="mat-elevation-z8">
+<table mat-table [dataSource]="authors" class="mat-elevation-z8 data-table">
 
     <ng-container matColumnDef="#">
       <th mat-header-cell *matHeaderCellDef> # </th>
