--- a/src/app/books/components/books/books.component.scss
+++ b/src/app/books/components/books/books.component.scss
@@ -1,6 +1,9 @@
+@import '../../../app.component.scss';
+
 table{
     width: 85vw;
     margin: 30px 0;
+    @include data-table;
     th{
         font-size: 16px;
         font-style: bold;
