--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,21 +1,8 @@
-@mixin data-table{
-  margin-top:50px;
-  margin-left: 50%;
-  transform: translateX(-50%);
+#sidebar{
+    position: absolute;
+    width: 75px;
+    min-height: 92vh;
+    height: 100%;
 }
-#content {
-    display: grid;
-    grid-template-columns: 45px auto;
-    grid-template-rows: 56px auto;
-    header {
-      grid-row: 1;
-      grid-column: 1/3;
-    }
-    #sidebar{
-      grid-row: 2;
-      grid-column: 1;
-      min-height: 92vh;
-      background-color: #8053a3;
-    }
-}
+
 
