--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,3 +1,6 @@
 <mat-toolbar color="primary">
+  <button mat-icon-button (click)="showSideBar()" class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
   <h1>My Books</h1>
 </mat-toolbar>
