--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,12 +1,5 @@
-<div id="drawers">
-  <!-- <mat-sidenav>
-    <mat-drawer id="hidden-drawer" #drawer mode="over">
-      <h2>Library</h2>
-      <h2>Authors</h2>
-    </mat-drawer>
-  </mat-sidenav>
-   -->
-  <mat-drawer mode="side" opened >
+<mat-drawer-container class="example-container">
+  <mat-drawer class="example-sidenav" mode="side">
     <button mat-icon-button class="example-icon" [routerLink]="['/books', 'page', '1']">
       <mat-icon>library_books</mat-icon>
     </button>
@@ -14,4 +7,4 @@
       <mat-icon>supervisor_account</mat-icon>
     </button>
   </mat-drawer>
-</div>
+</mat-drawer-container>
