--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,8 +1,10 @@
 button, h2{
     margin: 30px 0;   
 }
-#hidden-drawer{
+mat-drawer-container{
     position: absolute;
-    left: 45px;
-    height: 92vh;
+    width: 75px;
+    min-height: 92vh;
+    height: 100%;
+    background: none;
 }
