--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,15 @@
-#sidebar{
-    position: absolute;
-    width: 75px;
-    min-height: 92vh;
-    height: 100%;
+header{
+    position: fixed;
+    width: 100%;
+    z-index: 2;
 }
+main{
+    position: relative;
+    #sidebar{
+        position: absolute;
+        height: 100%;
+    }
+}
+
 
 
