--- a/src/app/authors/components/authors/authors.component.scss
+++ b/src/app/authors/components/authors/authors.component.scss
@@ -1,14 +1,17 @@
-
-table{
-    width: 85vw;
-    margin-top: 50px;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    th{
-        font-size: 16px;
-        font-style: bold;
-    }
-    th, td{
-        text-align: center;
+#authors{
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    table{
+        margin-top: 75px;
+        margin-bottom: 20px;
+        width: 85vw;
+        th{
+            font-size: 16px;
+            font-style: bold;
+        }
+        th, td{
+            text-align: center;
+        }
     }
 }
