--- a/src/app/book/components/book/book.component.scss
+++ b/src/app/book/components/book/book.component.scss
@@ -1,7 +1,10 @@
-h1, h2, p, pre{
-    color: white;
-}
-p{
-    font-size: 16px;
-    margin: 0 20px;
+#bookDetails{
+    height: 99vh;
+    h1, h2, p, pre{
+        color: white;
+    }
+    p{
+        font-size: 16px;
+        margin: 0 20px;
+    }
 }
