--- a/src/app/books/components/books/books.component.scss
+++ b/src/app/books/components/books/books.component.scss
@@ -1,25 +1,41 @@
 #books{
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
-    margin: 15px;
+    margin: 0 15px;
+    padding-top: 55px;
     mat-card{
         cursor: pointer;
-        width: 25%;
-        margin: 15px 0;
+        width: 20%;
+        height: 365px;
+        margin: 20px 15px 15px 20px;
         mat-card-header{
             display: flex;
             justify-content: center;
             align-items: center;
             text-align: center;
             height: 100px;
+            mat-card-title{
+                display: -webkit-box;
+                -webkit-line-clamp: 3;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
         }
         mat-card-content{
             text-align: center;
         }
         .book-img{
+            width: 50%;
             height: 50%;
+            margin-left: 50%;
+            transform: translateX(-50%);
         }
     }
+}
+p{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
