--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,10 +1,11 @@
 button, h2{
     margin: 30px 0;   
+    width: 100%;
 }
 mat-drawer-container{
-    position: absolute;
+    position: fixed;
+    top: 55px;
     width: 75px;
-    min-height: 92vh;
-    height: 100%;
+    height: 100vh;
     background: none;
 }
