--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,12 @@
 header{
     position: fixed;
+    top: 0;
     width: 100%;
     z-index: 2;
 }
 main{
     position: relative;
+    height: 100%;
     #sidebar{
         position: absolute;
         height: 100%;
