--- a/src/app/authors/components/authors/authors.component.scss
+++ b/src/app/authors/components/authors/authors.component.scss
@@ -1,7 +1,10 @@
 #authors{
     display: flex;
     justify-content: center;
-    align-self: center;
+    height: 100%;
+    mat-spinner{
+        align-self: center;
+    }
     table{
         margin-top: 75px;
         margin-bottom: 20px;
