Feat.(authors-module): add paginator for authors

--- a/src/app/books/components/books/books.component.scss
+++ b/src/app/books/components/books/books.component.scss
@@ -1,6 +1,7 @@
 #books{
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
     margin: 0 15px;
     padding-top: 55px;
     mat-card{
