--- a/src/app/authors/components/authors/authors.component.html
+++ b/src/app/authors/components/authors/authors.component.html
@@ -3,27 +3,30 @@
   <mat-spinner *ngIf="loading; else authorsBlock"></mat-spinner>
 
   <ng-template #authorsBlock>
-    <table mat-table [dataSource]="authors" class="mat-elevation-z8 data-table">
+    <div id="tableContent">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 data-table">
 
-        <ng-container matColumnDef="#">
-          <th mat-header-cell *matHeaderCellDef> # </th>
-          <td mat-cell *matCellDef="let author"> {{author.id}} </td>
-        </ng-container>
-      
-        <ng-container matColumnDef="firstname">
-          <th mat-header-cell *matHeaderCellDef> FIRSTNAME </th>
-          <td mat-cell *matCellDef="let author"> {{author.first_name}} </td>
-        </ng-container>
-      
-        <ng-container matColumnDef="lastname">
-          <th mat-header-cell *matHeaderCellDef> LASTNAME </th>
-          <td mat-cell *matCellDef="let author"> {{author.last_name}} </td>
-        </ng-container>
+          <ng-container matColumnDef="#">
+            <th mat-header-cell *matHeaderCellDef> # </th>
+            <td mat-cell *matCellDef="let author"> {{author.id}} </td>
+          </ng-container>
         
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let author; columns: displayedColumns;" 
-        [routerLink]="['author', author.id]"></tr>
-    </table>
+          <ng-container matColumnDef="firstname">
+            <th mat-header-cell *matHeaderCellDef> FIRSTNAME </th>
+            <td mat-cell *matCellDef="let author"> {{author.first_name}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="lastname">
+            <th mat-header-cell *matHeaderCellDef> LASTNAME </th>
+            <td mat-cell *matCellDef="let author"> {{author.last_name}} </td>
+          </ng-container>
+          
+          <tr mat-header-row *matHeaderRowDef="displayedColumns, sticky: true" ></tr>
+          <tr mat-row *matRowDef="let author; columns: displayedColumns;" 
+          [routerLink]="['author', author.id]"></tr>
+      </table>
+      <app-paginator [maxLength]="authors.length" (OnCreate)="takePaginator($event)"></app-paginator>
+    </div>
   </ng-template>
 </div>
 
