--- a/src/app/authors/components/authors/authors.component.scss
+++ b/src/app/authors/components/authors/authors.component.scss
@@ -1,13 +1,12 @@
 #authors{
     display: flex;
     justify-content: center;
+    flex-flow: row wrap;
     height: 100%;
     mat-spinner{
         align-self: center;
     }
     table{
-        margin-top: 75px;
-        margin-bottom: 20px;
         width: 85vw;
         th{
             font-size: 16px;
@@ -17,4 +16,14 @@
             text-align: center;
         }
     }
+    mat-paginator{
+        width: 85vw;
+        margin-top: 75px;
+    }
 }
+#tableContent {
+    height: 592px;
+    overflow: auto;
+    margin-top: 75px;
+}
+
