--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="example-container">
   <mat-drawer class="example-sidenav" mode="side">
-    <button mat-icon-button class="example-icon" [routerLink]="['/books', 'page', '1']">
+    <button mat-icon-button class="example-icon" [routerLink]="['/books']">
       <mat-icon>library_books</mat-icon>
       <p>Books</p>
     </button>
