--- a/src/app/authors/components/authors/authors.component.scss
+++ b/src/app/authors/components/authors/authors.component.scss
@@ -11,6 +11,7 @@
         th{
             font-size: 16px;
             font-style: bold;
+            z-index: 0;
         }
         th, td{
             text-align: center;
