--- a/src/app/books/components/books/books.component.html
+++ b/src/app/books/components/books/books.component.html
@@ -1,14 +1,31 @@
 <div id="books">
-  <mat-card class="example-card" *ngFor="let book of books" [routerLink]="['/book', book.id]">
-    <mat-card-header>
-      <mat-card-title>{{book?.title}}</mat-card-title>
-      <mat-card-subtitle>Price: {{book?.price}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image class="book-img" src="../../../../assets//book.png" alt="Book image not found">
-    <mat-card-content>
-      <p>
-        {{book?.description}}
-      </p>
-    </mat-card-content>
-  </mat-card>
+  
+  <mat-spinner *ngIf="loadingPage; else booksBlock"></mat-spinner>
+  <ng-template #booksBlock>
+    <div id="bookContent">
+      <mat-spinner *ngIf="loadingBooks; else booksTable"></mat-spinner>
+      <ng-template #booksTable>
+        <mat-card class="example-card" 
+                  *ngFor="let book of books" 
+                  [routerLink]="['/book', book.id]">
+          <mat-card-header>
+          <mat-card-title>{{book?.title}}</mat-card-title>
+          <mat-card-subtitle>Price: {{book?.price}}</mat-card-subtitle>
+          </mat-card-header>
+          <img mat-card-image class="book-img" src="../../../../assets//book.png" alt="Book image not found">
+          <mat-card-content>
+            <p>
+              {{book?.description}}
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </ng-template>
+
+    </div>
+    <app-paginator 
+      [maxLength]='books?.length'
+      [itemsPerPage]='[10, 25, 50, 75, 100, 125, 150]' 
+      (create)="takePaginator($event)" 
+      (changeSize)="changePageSize($event)"></app-paginator>
+  </ng-template>
 </div>
