--- a/src/app/books/components/books/books.component.scss
+++ b/src/app/books/components/books/books.component.scss
@@ -1,9 +1,16 @@
+p{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
 #books{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     margin: 0 15px;
     padding-top: 55px;
+    height: 92%;
     mat-card{
         cursor: pointer;
         width: 20%;
@@ -32,11 +39,24 @@
             transform: translateX(-50%);
         }
     }
+    mat-spinner{
+        align-self: center;
+        width: 100%;
+    }
+    app-paginator{
+        width: 100%;
+    }
 }
-p{
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+#bookContent{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 100%;
+    height: 92%;
+    overflow: auto;
+    margin-top: 5px;
+}
+.hide{
+    display: none;
 }
 
