--- a/src/app/books/components/books/books.component.scss
+++ b/src/app/books/components/books/books.component.scss
@@ -6,11 +6,10 @@ p{
 }
 #books{
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     justify-content: center;
     margin: 0 15px;
-    padding-top: 55px;
-    height: 92%;
+    height: 100%;
     mat-card{
         cursor: pointer;
         width: 20%;
@@ -52,11 +51,10 @@ p{
     flex-flow: row wrap;
     justify-content: center;
     width: 100%;
-    height: 92%;
+    height: 91%;
     overflow: auto;
-    margin-top: 5px;
 }
 .hide{
-    display: none;
+    visibility: hidden;
 }
 
