--- a/src/app/books/components/books/books.component.scss
+++ b/src/app/books/components/books/books.component.scss
@@ -51,7 +51,8 @@ p{
     flex-flow: row wrap;
     justify-content: center;
     width: 100%;
-    height: 91%;
+    height: 85%;
+    margin-top: 50px;
     overflow: auto;
 }
 .hide{
