Feat.(books-module): add genre filters for books

--- a/src/app/authors/components/authors/authors.component.html
+++ b/src/app/authors/components/authors/authors.component.html
@@ -26,8 +26,8 @@
       </table>
 
       <app-paginator 
-      [maxLength]="authorsQuantity" 
-      [itemsPerPage]='[10, 25, 50]' 
+      [records]="authorsQuantity" 
+      [limits]='[10, 25, 50]' 
       (create)="takePaginator($event)"></app-paginator>
 
     </div>
