--- a/src/app/layout/paginator/paginator.component.html
+++ b/src/app/layout/paginator/paginator.component.html
@@ -1,5 +1,5 @@
 <mat-paginator 
-    [length]="maxLength" 
-    [pageSizeOptions]="itemsPerPage" 
+    [length]="records" 
+    [pageSizeOptions]="limits" 
     showFirstLastButtons 
     (page)="changedSize($event)"></mat-paginator>
