--- a/src/app/books/components/books/books.component.scss
+++ b/src/app/books/components/books/books.component.scss
@@ -12,7 +12,7 @@ p{
     height: 100%;
     mat-card{
         cursor: pointer;
-        width: 20%;
+        width: 25%;
         height: 365px;
         margin: 20px 15px 15px 20px;
         mat-card-header{
@@ -59,9 +59,8 @@ p{
     position: absolute;
     top: 55px;
     right: 0;
-    width: 20%;
     mat-card{
-        width: 100%;
+        width: max-content;
         height: max-content;
     }
     mat-radio-group{
@@ -74,5 +73,12 @@ p{
 }
 .hide{
     visibility: hidden;
+}
+@media (max-width: 1053px){
+    #books{
+        mat-card{
+            width: 40%;
+        }
+    }
 }
 
