Feat.(app-module): books code refactor

--- a/src/app/books/components/books/books.component.html
+++ b/src/app/books/components/books/books.component.html
@@ -1,45 +1,39 @@
 <div id="books">
-  
+
   <mat-spinner *ngIf="loadingPage; else booksBlock"></mat-spinner>
+
+
   <ng-template #booksBlock>
-    <div id="bookContent">
-      <mat-spinner *ngIf="loadingBooks; else booksTable"></mat-spinner>
-      <ng-template #booksTable>
-        <mat-card class="example-card" 
-                  *ngFor="let book of books$ | async" 
-                  [routerLink]="['/book', book.id]">
-          <mat-card-header>
-          <mat-card-title>{{book?.title}}</mat-card-title>
-          <mat-card-subtitle>Price: {{book?.price}}</mat-card-subtitle>
-          </mat-card-header>
-          <img mat-card-image class="book-img" src="../../../../assets//book.png" alt="Book image not found">
-          <mat-card-content>
-            <p>
-              {{book?.description}}
-            </p>
-          </mat-card-content>
-        </mat-card>
-      </ng-template>
+
+  <app-search-field></app-search-field>
+
+    <div id="content">
+      <div id="viewBooks">
+        <app-books-content
+            *ngIf="(books$ | async) as books; else loading"
+            [books]="books">
+        </app-books-content>
+
+        <ng-template #loading>
+          <mat-spinner></mat-spinner>
+        </ng-template>
+
+        <app-paginator
+            [records]='booksQuantity'
+            [limits]='[10, 25, 50, 75, 100, 125, 150]'
+            (changed)="changePageSize($event)">
+        </app-paginator>
+      </div>
+        <app-filters
+        *ngIf="(genres$ | async) as genres"
+        [genres]="genres"
+      ></app-filters>
+
 
     </div>
-    <div id="genreFilters">
-      <mat-card class="example-card">
-        <mat-card-content>
-          <mat-radio-group
-          [(ngModel)]="filterBy"
-            (ngModelChange)="getBooks(filterBy)">
-            <mat-radio-button [value]="undefined">All Genres</mat-radio-button>
-            <mat-radio-button class="example-radio-button" *ngFor="let genre of genres$ | async" [value]="genre.name">
-              {{genre.name}}
-            </mat-radio-button>
-          </mat-radio-group>
-        </mat-card-content>
-      </mat-card>
-    </div>
-    <app-paginator 
-      [records]='booksQuantity'
-      [limits]='[10, 25, 50, 75, 100, 125, 150]'
-      (changed)="changePageSize($event)">
-    </app-paginator>
+
+
+
   </ng-template>
+
 </div>
