--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,12 @@
 header{
-    position: fixed;
-    top: 0;
-    width: 100%;
+    position: relative;
     z-index: 102;
 }
 main{
     position: relative;
-    height: 100%;
+    height: 92%;
     #sidebar{
         position: absolute;
-        height: 100%;
     }
 }
 
