--- a/src/app/books/components/filters/filters.component.html
+++ b/src/app/books/components/filters/filters.component.html
@@ -1,7 +1,51 @@
+<form [formGroup]="filtersForm" (ngSubmit)="applyFilters()">
   <mat-form-field appearance="fill">
     <mat-label>Genre filters</mat-label>
-    <mat-select multiple>
-      <mat-option *ngFor="let genre of genres" [value]="genre.name">{{genre.name}}</mat-option>
+    <mat-select multiple formControlName="genres">
+      <mat-option *ngFor="let genre of genres" [value]="genre.name">{{
+        genre.name
+      }}</mat-option>
     </mat-select>
   </mat-form-field>
 
+  <mat-form-field class="example-full-width">
+    <mat-label>Price from</mat-label>
+    <input type="number" matInput formControlName="minPrice" />
+  </mat-form-field>
+
+  <mat-form-field class="example-full-width">
+    <mat-label>Price to</mat-label>
+    <input type="number" matInput formControlName="maxPrice" />
+  </mat-form-field>
+
+  <mat-form-field color="accent" appearance="fill">
+    <mat-label>Release date from</mat-label>
+    <input
+      matInput
+      [matDatepicker]="pickerFrom"
+      formControlName="releaseFrom"
+      (dateInput)="lol($event)" (dateChange)="lol($event)"
+    />
+    <mat-datepicker-toggle matSuffix [for]="pickerFrom"></mat-datepicker-toggle>
+    <mat-datepicker #pickerFrom startView="multi-year"></mat-datepicker>
+  </mat-form-field>
+
+  <mat-form-field color="accent" appearance="fill">
+    <mat-label>Release date to</mat-label>
+    <input matInput [matDatepicker]="pickerTo" formControlName="releaseTo" />
+    <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
+    <mat-datepicker #pickerTo startView="multi-year"></mat-datepicker>
+  </mat-form-field>
+
+  <button
+    type="submit"
+    mat-button
+    color="accent"
+    *ngIf="filtersForm.touched && filtersForm.valid ; else disabled"
+  >
+    Accept filters
+  </button>
+  <ng-template #disabled>
+    <button mat-button disabled>Accept filters</button>
+  </ng-template>
+</form>
