--- a/src/app/books/components/books/books.component.scss
+++ b/src/app/books/components/books/books.component.scss
@@ -30,3 +30,14 @@
     top: 30%;
   }
 }
+#nfBooks{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;;
+  justify-content: center;
+  align-items: center;
+  h2{
+    color: #fff;;
+  }
+}
