--- a/src/app/books/components/books/books.component.scss
+++ b/src/app/books/components/books/books.component.scss
@@ -31,7 +31,7 @@
 }
 #nfBooks{
   width: 100%;
-  height: 100%;
+  height: 80%;
   display: flex;
   flex-direction: column;;
   justify-content: center;
@@ -39,4 +39,7 @@
   h2{
     color: #fff;;
   }
+}
+.hide{
+  visibility: hidden;
 }
